# gd_pm

./: .env  .gitignore  main.py  pyproject.toml
backend/: app.py
feishu/: __init__.py  account.py  auth.py  base_file.py  client.py  config.py  doc.py  drive.py  file.py  folder.py  media.py  runner.py
feishu/file/: __init__.py  base_file.py  doc.py  doc_parser.py  file.py  folder.py  media.py
server/: app.py
session/: __init__.py  common.py  drive_model.py  login.py  session.py  tenant.py  uploader.py  workspace.py
utils/: __init__.py  cipher.py  config.py  config_store.py  logger.py  settings.py
workspace/: __init__.py  common.py  drive_model.py  session.py  uploader.py  workspace.py
